--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title>xantux personal github page</title>
-  
+<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
-<h1>Under Construction</h1>
+<h1>Coming Soon...</h1>
   
 </body>
 </html>
