--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
+    <!-- REPORT NORMALE
     <div id="st-embeddable" embed="3" campaign="1" embed-type="1" embed-type-id="1" lang="it" class="st-form st-custom-embed-3">
         <div class="st-form-title">Analisi SEO del tuo sito web</div>
         <div class="st-form-subtitle">Ottieni un Report SEO gratuito</div>
@@ -25,6 +26,25 @@
         <div id="st-form-message" class="st-form-message"></div>
     </div>
     <script>(function(d, s, id,w,cId,eId,eTId,eT){w._stoEmbed={campaignId:cId,embedId:eId,embedTypeId:eTId,embedType:eT};var js, fjs = d.getElementsByTagName(s)[0];if (d.getElementById(id)) {return;}js = d.createElement(s); js.id = id;js.src = "http://localhost:8080/app/modules/leadgeneration/sdk/sto-sdk.js?v=SWdRYuXkmp2x";fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'sto-jssdk',window,1,3,1,"branded"));</script>
-  
+    -->
+    <!-- REPORT PDF -->
+    <div id="st-embeddable" lang="en" class="st-form st-custom-embed-8">
+        <div class="st-form-title">SEO Analysis for your website</div>
+        <div class="st-form-subtitle">Get a free SEO Report</div>
+        <div class="st-form-fields">
+        <div>
+        <input class="st-form-input" type="text" name="website" placeholder="Website URL (e.g. yourwebsite.com)">
+        </div><div>
+        <input class="st-form-input" type="email" name="email" placeholder="Email (e.g. your@awesome.email)">
+        </div><div>
+        <input class="st-form-input" type="text" name="keywords" placeholder="Keyword (e.g. Car wash)">
+        </div>
+        
+        </div>
+        <div>
+        <button id="st-form-cta-button" class="st-form-cta-button st-form-button m-b-xs" style="color: rgb(255, 255, 255); background: rgb(255, 136, 0);">Analyze</button>
+        </div>
+        <div id="st-form-message" class="st-form-message"></div>
+        </div><script>(function(d, s, id,w,cId,eId){w._stoEmbed={campaignId:cId,embedId:eId};var js, fjs = d.getElementsByTagName(s)[0];if (d.getElementById(id)) {return;}js = d.createElement(s); js.id = id;js.src = "http://localhost:8080/app/modules/leadgeneration/sdk/sto-sdk.js?v=E8ODoLBg6AkC";fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'sto-jssdk',window,1,8));</script>
 </body>
 </html>
